--- a/pagelet/feather/dest.html
+++ b/pagelet/feather/dest.html
@@ -1,4 +1,4 @@
-<script>require.mergeConfig({"map":{},"deps":{},"css":[]})</script><p>release dest功能的用法主要包括这几块：</p><p>1. 直接release： 预览模式使用</p><p>2. 后面直接跟一个目录，则表示产出至目标目录，如：</p><pre class="code" data-type="shell">
+<script>require.mergeConfig({"map":{},"deps":{}})</script><p>release dest功能的用法主要包括这几块：</p><p>1. 直接release： 预览模式使用</p><p>2. 后面直接跟一个目录，则表示产出至目标目录，如：</p><pre class="code" data-type="shell">
 feather release --dest ../abc
 #产出至上一级目录的abc目录下
 </pre><p>3. 使用deploy配置，配置feather_conf.js:</p><pre class="code" data-type="js">
