--- a/pagelet/feather/embed.html
+++ b/pagelet/feather/embed.html
@@ -1,4 +1,4 @@
-<script>require.mergeConfig({"map":{},"deps":{},"css":[]})</script><p>内容嵌入是feather从fis中继承过来的3种能力之一</p><p>在html和css中的用法一致，比如:</p><pre class="code" data-type="html">
+<script>require.mergeConfig({"map":{},"deps":{}})</script><p>内容嵌入是feather从fis中继承过来的3种能力之一</p><p>在html和css中的用法一致，比如:</p><pre class="code" data-type="html">
 &lt;!--该图片的内容会以base64的方式引入进img标签中-->
 &lt;img src="/static/1.png?__inline" />
 
