--- a/pagelet/feather/plugin.html
+++ b/pagelet/feather/plugin.html
@@ -1,4 +1,4 @@
-<script>require.mergeConfig({"map":{},"deps":{},"css":[]})</script><p>feather会持续更新一些常见有用的插件</p><ul class="ul-list"><li>feather-postprocessor-inline-compress(内联样式以及script压缩):<pre data-type="html" data-title="xxx.html" class="code">
+<script>require.mergeConfig({"map":{},"deps":{}})</script><p>feather会持续更新一些常见有用的插件</p><ul class="ul-list"><li>feather-postprocessor-inline-compress(内联样式以及script压缩):<pre data-type="html" data-title="xxx.html" class="code">
 <!--这段代码不做压缩-->
 &lt;script>
 (function(window, undefined){
