--- a/pagelet/feather/require.html
+++ b/pagelet/feather/require.html
@@ -1,4 +1,4 @@
-<script>require.mergeConfig({"map":{},"deps":{},"css":[]})</script><p>关于feather.js的详细文档，可访问feather的<a href="" class="link">github</a>，更多js模块化的解说，可详情百度。THANK YOU！</p><p>在feather中，feather.js为内置，编译时会自动加上，在代码中只需要直接调用feather.js所提供的方法即可</p><pre data-type="html" class="code" data-title="/page/index.html">
+<script>require.mergeConfig({"map":{},"deps":{}})</script><p>关于feather.js的详细文档，可访问feather的<a href="" class="link">github</a>，更多js模块化的解说，可详情百度。THANK YOU！</p><p>在feather中，feather.js为内置，编译时会自动加上，在代码中只需要直接调用feather.js所提供的方法即可</p><pre data-type="html" class="code" data-title="/page/index.html">
 &lt;html>
 &lt;head>
 &lt;title>index.phtml&lt;/title>
