--- a/pagelet/feather/sprite.html
+++ b/pagelet/feather/sprite.html
@@ -1,4 +1,4 @@
-<script>require.mergeConfig({"map":{},"deps":{},"css":[]})</script><p>feather中的sprite功能会对合并的css自动启用</p><pre class="code" data-type="js">
+<script>require.mergeConfig({"map":{},"deps":{}})</script><p>feather中的sprite功能会对合并的css自动启用</p><pre class="code" data-type="js">
 feather.config.set('pack', {
 	'static/combine.css': 'static/**.css'
 });
