--- a/pagelet/feather/start.html
+++ b/pagelet/feather/start.html
@@ -1,4 +1,4 @@
-<script>require.mergeConfig({"map":{},"deps":{},"css":[]})</script><p>首先，feather有个比较简单的目录结构规范：</p><pre class="code" data-type="shell">
+<script>require.mergeConfig({"map":{},"deps":{}})</script><p>首先，feather有个比较简单的目录结构规范：</p><pre class="code" data-type="shell">
 ├── component
 ├── page
 │   └── index.html
