--- a/pagelet/feather/static.html
+++ b/pagelet/feather/static.html
@@ -1,4 +1,4 @@
-<script>require.mergeConfig({"map":{},"deps":{},"css":[]})</script><p>创建一个index2.js文件</p><pre class="code" data-type="js" data-title="/static/index/index2.js">
+<script>require.mergeConfig({"map":{},"deps":{}})</script><p>创建一个index2.js文件</p><pre class="code" data-type="js" data-title="/static/index/index2.js">
 alert(2);
 </pre><p>如果我想将index.js放置页面顶部，而index2.js放置页面底部，该怎么做？试试下面代码：</p><pre class="code" data-type="html" data-title="/page/index.html">
 &lt;html>
