--- a/pagelet/feather/uri.html
+++ b/pagelet/feather/uri.html
@@ -1,4 +1,4 @@
-<script>require.mergeConfig({"map":{},"deps":{},"css":[]})</script><p>资源定位是feather从fis中继承过来的3种能力之一，在之前的文档中其实已经有使用到，比如url自动添加domain，版本号等，都属于资源定位，资源定位还有一些其他用法，比如：</p><pre class="code" data-type="js">
+<script>require.mergeConfig({"map":{},"deps":{}})</script><p>资源定位是feather从fis中继承过来的3种能力之一，在之前的文档中其实已经有使用到，比如url自动添加domain，版本号等，都属于资源定位，资源定位还有一些其他用法，比如：</p><pre class="code" data-type="js">
 //配置config，产出的所有的静态资源的baseurl都变为/a/b/c/d
 feather.config.set('statics', '/a/b/c/d');	//默认为/static
 //   /static/1.js => /a/b/c/d/1.js
