--- a/pagelet/ui/cookie.html
+++ b/pagelet/ui/cookie.html
@@ -1,4 +1,4 @@
-<script>require.mergeConfig({"map":{"/static/common/mod/cookie/cookie.js?version=4ef5f53":["/static/common/mod/cookie/cookie.js"],"/static/common/mod/jquery/jquery.js?version=c57faf4":["/static/common/mod/jquery/jquery.js"]},"deps":{"/static/common/mod/cookie/cookie.js":["/static/common/mod/jquery/jquery.js"]},"css":[]})</script><p>cookie插件</p><p>方法列表</p><ul class="ul-list"><li>get(key[, _defaultValue]): 获取值</li><li>set(key, value[, options]): 设置一个cookie<script data-type="show" type="text/html">
+<script>require.mergeConfig({"map":{"/static/common/mod/cookie/cookie.js?version=4ef5f53":["/static/common/mod/cookie/cookie.js"],"/static/common/mod/jquery/jquery.js?version=c57faf4":["/static/common/mod/jquery/jquery.js"]},"deps":{"/static/common/mod/cookie/cookie.js":["/static/common/mod/jquery/jquery.js"]}})</script><p>cookie插件</p><p>方法列表</p><ul class="ul-list"><li>get(key[, _defaultValue]): 获取值</li><li>set(key, value[, options]): 设置一个cookie<script data-type="show" type="text/html">
 require.async("common:cookie", function(Cookie){
 	Cookie.set('name', '123', {
 		domain: 'www.xxx.com',
