--- a/pagelet/feather/map.html
+++ b/pagelet/feather/map.html
@@ -1,4 +1,4 @@
-<script>require.mergeConfig({"map":{},"deps":{},"css":[]})</script><p>项目上线之前需要后端的模版引擎配合加载map表，如果是非map表模式则不需要，后端可选择feather提供的模版引擎<a class="link" href="https://github.com/feather-ui/feather_view">feather_view</a>，也可以使用自己的模版引擎，如果使用自己的模版引擎需要实现3个接口和一个插件注入机制。</p><p>在feather-view中，赋值和取值的接口分别为set和get，以及load方法，原型为：</p><pre class="code" data-type="php">
+<script>require.mergeConfig({"map":{},"deps":{}})</script><p>项目上线之前需要后端的模版引擎配合加载map表，如果是非map表模式则不需要，后端可选择feather提供的模版引擎<a class="link" href="https://github.com/feather-ui/feather_view">feather_view</a>，也可以使用自己的模版引擎，如果使用自己的模版引擎需要实现3个接口和一个插件注入机制。</p><p>在feather-view中，赋值和取值的接口分别为set和get，以及load方法，原型为：</p><pre class="code" data-type="php">
 &lt;?php
 class Feather_View{
 	//....
