--- a/pagelet/ui/suggestion.html
+++ b/pagelet/ui/suggestion.html
@@ -1,1 +1,1 @@
-<script>require.mergeConfig({"map":{},"deps":{},"css":[]})</script><p>Suggestion组件</p><p>参数列表：</p><ul class="ul-list"><li>dom: 绑定suggestion的元素<br /><input type="text" id="suggestion-options-dom" /></li></ul>
+<script>require.mergeConfig({"map":{},"deps":{}})</script><p>Suggestion组件</p><p>参数列表：</p><ul class="ul-list"><li>dom: 绑定suggestion的元素<br /><input type="text" id="suggestion-options-dom" /></li></ul>
