--- a/pagelet/ui/suggestion/suggestion.html
+++ b/pagelet/ui/suggestion/suggestion.html
@@ -49,4 +49,4 @@ require.async(["common:suggestion", "common:placeholder"], function(Suggestion, 
 		text: '输入你要查询的内容'
 	});
 });
-	</script></li><li>format(text, kw): 重新设置一个自己的format回调，返回值为字符串，默认返回直接匹配到的候选项</li></ul><p>方法列表：</p><ul class="ul-list"><li>setData(data): 手动设置一个本地数据源</li><li>open(): 手动打开</li><li>close(): 手动关闭</li></ul>
+	</script></li><li>format(text, kw): 重新设置一个自己的format回调，返回值为字符串，默认返回直接匹配到的候选项</li><li>callback(text): 选中候选项时，触发回调，this指suggestion对象，text为选中项文字</li></ul><p>方法列表：</p><ul class="ul-list"><li>setData(data): 手动设置一个本地数据源</li><li>open(): 手动打开</li><li>close(): 手动关闭</li></ul>
