--- a/pagelet/feather/static.html
+++ b/pagelet/feather/static.html
@@ -39,4 +39,4 @@ paffe.config.set('pack', {
 });
 </pre><p>feather同时还提供了 预览调试时会加载的文件，而且正式产出后不会被收集的配置, 方便本地调试时使用</p><pre data-type="html" class="code">
 &lt;script src="/static/index/index.js" feather-dest-ignore>&lt;/script>
-</pre><p>feather对css文件的位置处理只有fixed和head两种，默认为head。</p><p class="color-red">关于页面静态零散资源自动打包：<br />1. 非staticMode模式下，可使用<a href="#map" class="link">autoload_static插件</a>的combo功能，进行自动零散资源收集打包，本地调试时，设置comboDebug为true即可开启本地combo模式预览（combo功能开启后，cssA2R功能需要关闭，否则css中的img资源加载有可能会出问题）<br />2. staticMode模式下，可配置autoCombine为true</p>
+</pre><p>feather对css文件的位置处理只有fixed和head两种，默认为head。</p><p class="color-red">关于页面静态零散资源自动打包：<br />1. 非staticMode模式下，可使用<a href="#map" class="link">autoload_static插件</a>的combo功能，进行自动零散资源收集打包，本地调试时，设置comboDebug为true即可开启本地combo模式预览<br />2. staticMode模式下，可配置autoCombine为true</p>
