--- a/pagelet/feather/dest.html
+++ b/pagelet/feather/dest.html
@@ -65,4 +65,4 @@ feather.config.set('deploy', {
         }
     }
 });
-</pre>
+</pre><p>注：直接上传至远程机器，需配置receive参数，远程机器需放置<a href="/vendor/receiver.php">receiver</a>文件，或自行实现接收文件机制。远程需要对要上传的目录做权限控制操作。</p>
