--- a/pagelet/ui/template.html
+++ b/pagelet/ui/template.html
@@ -1,4 +1,4 @@
-<script>require.mergeConfig({"map":{"/static/common/mod/template/template.js?version=a308afd":["/static/common/mod/template/template.js"]},"deps":{}})</script><p>Template 模版引擎</p><p>使用方法：</p><ul class="ul-list"><li>fetch(domId): fetch用于快速获取一个元素内容，并返回执行后的结果<script type="text/html" data-type="none" id="test">
+<script>require.mergeConfig({"map":{"/static/common/mod/template/template.js":["/static/common/mod/template/template.js"]},"deps":{}})</script><p>Template 模版引擎</p><p>使用方法：</p><ul class="ul-list"><li>fetch(domId): fetch用于快速获取一个元素内容，并返回执行后的结果<script type="text/html" data-type="none" id="test">
 	<%list.forEach(function(item){%>
 		<p><%=item.name%></p>
 	<%});%>
