--- a/pagelet/feather/dest.html
+++ b/pagelet/feather/dest.html
@@ -1,7 +1,7 @@
 <script>require.mergeConfig({"map":{},"deps":{}})</script><p>release dest功能的用法主要包括这几块：</p><p>1. 直接release： 预览模式使用</p><p>2. 后面直接跟一个目录，则表示产出至目标目录，如：</p><pre class="code" data-type="shell">
 feather release --dest ../abc
 #产出至上一级目录的abc目录下
-</pre><p>3. 使用deploy配置，配置feather_conf.js:</p><pre class="code" data-type="js">
+</pre><p>3. 使用deploy配置，配置feather_conf.js:</p><p>注：直接上传至远程机器，需配置receive参数，远程机器需放置<a href="/vendor/receiver.php" class="link">receiver</a>文件，或自行实现接收文件机制。远程需要对要上传的目录做权限控制操作。</p><pre class="code" data-type="js">
 feather.config.set('deploy', {
 	//名字随便取的，没有特殊含义
     aaa : {
@@ -47,7 +47,7 @@ feather.config.set('deploy', {
 feather.config.set('deploy', {
 	//使用feather release --dest remote来使用这个配置
     remote : {
-        //如果配置了receiver，fis会把文件逐个post到接收端上
+        //如果配置了receiver，feather会把文件逐个post到接收端上
         receiver : 'http://www.example.com/path/to/receiver.php',
         //从产出的结果的static目录下找文件
         from : '/static',
@@ -65,4 +65,4 @@ feather.config.set('deploy', {
         }
     }
 });
-</pre><p>注：直接上传至远程机器，需配置receive参数，远程机器需放置<a href="/vendor/receiver.php">receiver</a>文件，或自行实现接收文件机制。远程需要对要上传的目录做权限控制操作。</p>
+</pre>
