--- a/pagelet/ui/class.html
+++ b/pagelet/ui/class.html
@@ -1,4 +1,4 @@
-<script>require.mergeConfig({"map":{"/static/common/mod/class/class.js":["/static/common/mod/class/class.js"],"/static/common/mod/jquery/jquery.js":["/static/common/mod/jquery/jquery.js"]},"deps":{"/static/common/mod/class/class.js":["/static/common/mod/jquery/jquery.js"]}})</script><p>Class 类构造器</p><p>Class提供了一个简单的方式，让使用者可以创建自己的类，并支持多级继承，可调用父级方法等，让咱直接上代码吧！</p><script data-title="创建一个类" type="text/html">
+<script>require.mergeConfig({"map":{"/static/common/mod/class/class.js?version=d716584":["/static/common/mod/class/class.js"],"/static/common/mod/jquery/jquery.js?version=f7d6831":["/static/common/mod/jquery/jquery.js"]},"deps":{"/static/common/mod/class/class.js":["/static/common/mod/jquery/jquery.js"]}})</script><p>Class 类构造器</p><p>Class提供了一个简单的方式，让使用者可以创建自己的类，并支持多级继承，可调用父级方法等，让咱直接上代码吧！</p><script data-title="创建一个类" type="text/html">
 require.async("common:class", function(Class){
 	var A = Class({
 		name: 'aaa',
